--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/cli": "^7.2.0",
     "@capacitor/core": "^7.2.0",
     "@capacitor/ios": "^7.2.0",
+    "cordova-plugin-photo-library": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
